# projeto_etl_financeiro

./: README.md  extract.py  pyproject.toml  transform.py
