[project]
name = "projeto-etl-financeiro"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Enes",email = "enesjoaogabriel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "black (>=25.1.0,<26.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
